--- a/Caopanhia/app/src/main/res/menu/activity_client_drawer.xml
+++ b/Caopanhia/app/src/main/res/menu/activity_client_drawer.xml
@@ -43,5 +43,15 @@
         </menu>
     </item>
 
+    <item android:title="Sessão">
+        <menu>
+            <item
+                android:id="@+id/navLogout"
+                android:title="Sair"
+                android:icon="@drawable/ic_action_logout"
+                />
+        </menu>
+    </item>
+
 
 </menu>
