--- a/Caopanhia/app/src/main/res/layout/nav_header_main.xml
+++ b/Caopanhia/app/src/main/res/layout/nav_header_main.xml
@@ -15,4 +15,12 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         app:srcCompat="@mipmap/ic_launcher_logo" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Username"
+        android:layout_marginLeft="10dp"
+        android:layout_marginBottom="10dp"/>
 </LinearLayout>
