logout+shared+strings

--- a/Caopanhia/app/src/main/res/layout/fragment_home_client.xml
+++ b/Caopanhia/app/src/main/res/layout/fragment_home_client.xml
@@ -23,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.05"
-            android:text="Bem-vindo,"
+            android:text="@string/txt_caopanhia"
             android:textSize="30dp"
             android:textColor="@color/soft_brown"
             android:textStyle="bold"
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="0.15"
-            android:text="Username"
+            android:text="@string/txt_bem_vindo"
             android:textSize="30dp"
             android:textColor="@color/soft_brown"
             android:textStyle="bold"
