--- a/Caopanhia/app/src/main/res/layout/activity_vet_main.xml
+++ b/Caopanhia/app/src/main/res/layout/activity_vet_main.xml
@@ -11,16 +11,16 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Bem-vindo,"
+        android:text="@string/txt_bem_vindo"
         android:textSize="30dp"
         android:textColor="@color/soft_brown"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tvUsernameVet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="@string/txt_username"
         android:textSize="30dp"
         android:textColor="@color/soft_brown"
         android:textStyle="bold" />
@@ -34,7 +34,7 @@
         android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Futuras consultas:"
+        android:text="@string/txt_futuras_consultas"
         android:textSize="20dp"
         android:layout_marginLeft="20dp"
         android:textColor="@color/soft_brown"
@@ -44,5 +44,19 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.9"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.1" />
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:text="@string/txt_sair"
+        android:backgroundTint="@color/soft_brown"
+        android:onClick="onClickLogout"/>
 
 </LinearLayout>
