--- a/Caopanhia/app/src/main/res/layout/fragment_appointment_list.xml
+++ b/Caopanhia/app/src/main/res/layout/fragment_appointment_list.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Minhas consultas:"
+            android:text="@string/txt_consultas_pessoais"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/soft_brown"
