--- a/Caopanhia/app/src/main/res/layout/fragment_pets_list.xml
+++ b/Caopanhia/app/src/main/res/layout/fragment_pets_list.xml
@@ -26,7 +26,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Meus cães:"
+            android:text="@string/txt_caes_pessoais"
             android:textSize="20dp"
             android:textStyle="bold"
             android:textColor="@color/soft_brown"
