--- a/Caopanhia/app/src/main/res/layout/nav_header_main.xml
+++ b/Caopanhia/app/src/main/res/layout/nav_header_main.xml
@@ -17,10 +17,10 @@
         app:srcCompat="@mipmap/ic_launcher_logo" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/tvUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Username"
+        android:text="@string/txt_username"
         android:layout_marginLeft="10dp"
         android:layout_marginBottom="10dp"/>
 </LinearLayout>
