--- a/Caopanhia/app/src/main/res/layout/fragment_pets_list.xml
+++ b/Caopanhia/app/src/main/res/layout/fragment_pets_list.xml
@@ -8,7 +8,7 @@
 
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/fabNewPet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -33,6 +33,7 @@
             android:layout_margin="15dp"/>
 
         <ListView
+            android:id="@+id/lvPets"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
