--- a/Caopanhia/app/src/main/res/layout/item_lista_caes.xml
+++ b/Caopanhia/app/src/main/res/layout/item_lista_caes.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="25sp"
-        android:text="NomeCao" />
+        android:text="@string/txt_default_nome_cao" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Ano de Nascimento:"
+            android:text="@string/txt_present_anoNascimento"
             android:textStyle="bold"
             android:textSize="15sp" />
 
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="15sp"
-            android:text="Ano" />
+            android:text="@string/txt_anoNascimento" />
     </LinearLayout>
 
 </LinearLayout>
