--- a/Caopanhia/app/src/main/res/layout/fragment_appointment_list.xml
+++ b/Caopanhia/app/src/main/res/layout/fragment_appointment_list.xml
@@ -21,6 +21,7 @@
             android:layout_margin="15dp"/>
 
         <ListView
+            android:id="@+id/lvAppointments"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
