Consultar encomendas + funcionalidades offline

--- a/Caopanhia/app/src/main/res/layout/activity_vet_main.xml
+++ b/Caopanhia/app/src/main/res/layout/activity_vet_main.xml
@@ -31,7 +31,6 @@
         android:layout_weight="0.1"/>
 
     <TextView
-        android:id="@+id/textView4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/txt_futuras_consultas"
@@ -41,6 +40,7 @@
         android:textStyle="bold" />
 
     <ListView
+        android:id="@+id/lvConsultas"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.9"/>
