--- a/Caopanhia/app/src/main/res/values/colors.xml
+++ b/Caopanhia/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="soft_brown">#A96B3A</color>
     <color name="yellow">#FFC913</color>
+    <color name="dark_brown">#6E370A</color>
 </resources>
